# pokedex

./: README.md  com.jkominovic.pokedex.json  meson.build
data/: com.jkominovic.pokedex.appdata.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES
src/: com.jkominovic.pokedex.data.gresource.xml  com.jkominovic.pokedex.src.gresource.xml  main.js  meson.build  pokedex.data.gresource.xml  pokedex.js  window.js  window.ui
